--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
 	
     <form action="home.html" method="post">
-     <h3>Concepcion Holy Cross College Inc.,</h3>
+     <h3> TryConcepcion Holy Cross College Inc.,</h3>
      <p>Minane, Rose Park, Concepcion, Tarlac</p>
      <h4>Examination Scheduling System</h4><br>
      <br>
