--- a/home.html
+++ b/home.html
@@ -9,8 +9,8 @@
 <body>
 	
     <form action="home.html" method="post">
-     <h3> TryConcepcion Holy Cross College Inc.,</h3>
-     <p>Minane, Rose Park, Concepcion, Tarlac</p>
+     <h3>Concepcion Holy Cross College Inc.,</h3>
+     <p>Enter Address Here</p>
      <h4>Examination Scheduling System</h4><br>
      <br>
      <br>
