--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <form action="home.html" method="post">
      <h3>Concepcion Holy Cross College Inc.,</h3>
      <p>Enter Address Here</p>
-     <h4>Examination Scheduling System</h4><br>
+     <h4>Online Examination Scheduling System</h4><br>
      <br>
      <br>
      <button ><a href="loginStudent.html">Student</a></button>
